--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: teamup-india-backend
     env: node
+    rootDir: backend
     buildCommand: npm install
     startCommand: npm start
     envVars:
