--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "teamup-india-backend",
   "version": "1.0.0",
   "description": "TeamUp India Backend - Sports Community Platform",
+  "license": "MIT",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
