--- a/PlayIndia/android/gradle.properties
+++ b/PlayIndia/android/gradle.properties
@@ -42,3 +42,9 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+# Fix for async-storage codegen issue on Windows/OneDrive
+org.gradle.caching=false
+org.gradle.configureondemand=false
+org.gradle.daemon=true
+org.gradle.parallel=false
