--- a/PlayIndia/android/build.gradle
+++ b/PlayIndia/android/build.gradle
@@ -47,9 +47,11 @@ subprojects {
             }
         }
     }
+}
 
-    // Fix for async-storage codegen issue on Windows/OneDrive
-    afterEvaluate { project ->
+// Fix for async-storage codegen issue on Windows/OneDrive
+gradle.projectsEvaluated {
+    subprojects { project ->
         if (project.hasProperty("android")) {
             project.tasks.configureEach { task ->
                 if (task.name.contains("generateCodegenSchemaFromJavaScript")) {
